# poofmq

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  buf.gen.yaml  composer.json  docker-compose.yml  eslint.config.js  nixpacks.toml  package-lock.json  package.json  railpack.json  railway-cron.json  railway-worker.json  railway.json
.github/workflows/: ci.yml  tests.yml
app/Exceptions/: RailwayGraphqlException.php
app/Jobs/: ReconcileApiKeysToRedis.php  RevokeApiKeyInRedis.php  SyncApiKeyToRedis.php  SyncRailwayBillingSnapshot.php
app/Models/: ActiveMonthBoost.php  ApiKey.php  DonationLedgerEntry.php  Project.php  RailwayBillingSnapshot.php  User.php
app/Policies/: ApiKeyPolicy.php  ProjectPolicy.php
app/Providers/: AppServiceProvider.php
app/Services/: ApiKeyService.php  CapacityLimitService.php  DonationLedgerService.php  FundingStatusService.php  ObservabilityAlertService.php  ObservabilityService.php  RailwayBillingService.php  RailwayGraphqlClient.php  (+3 more)
bootstrap/: app.php
config/: app.php  cache.php  database.php  mail.php  observability.php  poofmq.php  poofmq_capacity.php  services.php  session.php  topology.php
docs/: README.md  compatibility-policy.md  openapi-sdk-verification.md  publishing-sdks.md  quickstart.md  release-notes-api-template.md  sdk-versioning.md
railway/: add-redis.sh  init-app.sh  run-cron.sh  run-worker.sh  set-worker-cron-variables.sh
routes/: api.php  console.php  developers.php  projects.php  settings.php  web.php
scripts/: check-generated-artifacts.sh  generate-artifacts.sh  inject-openapi-version.sh  run-eslint-consistent.sh  sdk-generate.sh
sdks/: README.md
sdks/python/: README.md  pyproject.toml
sdks/python/poofmq/: __init__.py  client.py  encryption.py
sdks/python/test/: __init__.py  test_client_unit.py
sdks/python/test/integration/: run.py
(+148 files in other folders)
