[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poofmq"
version = "1.0.0"
description = "poofMQ Python SDK - push/pop queue client with optional client-side encryption"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "cryptography>=42",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["poofmq*", "poofmq.*"]
