[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poofmq"
version = "1.0.0"
description = "poofMQ Python SDK - push/pop queue client with optional client-side encryption"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "poofMQ", email = "support@poofmq.com" }]
keywords = ["poofmq", "queue", "api", "sdk"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "cryptography>=42",
  "pydantic>=2",
  "python-dateutil>=2.8.2",
  "typing-extensions>=4.7.1",
  "urllib3>=1.25.3,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
]

[project.urls]
Homepage = "https://poofmq.com/docs/quickstart"
Repository = "https://github.com/rubybear-lgtm/poofmq"
Documentation = "https://poofmq.com/docs/quickstart"

[tool.setuptools.packages.find]
where = [".", "generated"]
include = ["poofmq*", "poofmq.*", "openapi_client*", "openapi_client.*"]

[tool.setuptools.package-data]
openapi_client = ["py.typed"]
